# mfaomp

./: .gitignore  AddVideo.cpp  AddVideo.h  BackendAvailability.cpp  BackendAvailability.h  CMakeLists.txt  DropWidget.h  MainWindow.cpp  MainWindow.h  MediaPlayers.cpp  MediaPlayers.h  README.md  SettingsDialog.cpp  SettingsDialog.h  assets.rc  config.h.in  flake.nix  main.cpp  mfaomp.desktop  mingw-w64-x86_64.cmake  resources.qrc  vcpkg.json  version.h.in
.github/workflows/: build-release.yml  nightly.yml  windows-release.yml  windows-vcpkg.yml
MediaPlayerImpls/: BackEndEnum.cpp  BackEndEnum.h  CurrentBackEndStatusSingleton.h  PlayerFactory.cpp  PlayerFactory.h  QMediaPlayerStruct.cpp  QMediaPlayerStruct.h  QWebEngineStruct.cpp  QWebEngineStruct.h  SDL2Struct.cpp  SDL2Struct.h  VLCPlayerStruct.cpp  VLCPlayerStruct.h
catchtests/: CMakeLists.txt  test_main.cpp
packaging/: PKGBUILD  README.md  header-collector.sh  io.github.Neurofibromin.mfaomp.yaml  mfaomp-copr.spec  mfaomp-obs.spec  mfaomp.spec  package.nix  version-change.sh
tests/: AddVideoTests.cpp  BackEndManagerTests.cpp  CMakeLists.txt  PlayerFactoryTests.cpp  SettingTests.cpp  VLCTests.cpp  test_main.cpp  tst_mfaomp.cpp
xcompile/: README.md
